app/css/styles.scss
@import 'slick';

$column-width: 760px;
$green-primary: #00c775;
$green-intermediary: #6fd3a1;
$green-secondary: #e6faf1;

$blue-primary: cornflowerblue;
$blue-intermediary: #a4c0f4;
$blue-secondary: #e8effc;

$text: hsla(105, 1%, 40%, 1);
$em-text: hsla(105, 1%, 30%, 1);
$white: #FFF;
$black: #000;
$off-white: #FAFAFA;

$fonts: "futura-pt", Futura, sans-serif;

@mixin theme($name, $primary, $secondary, $intermediary) {
  .#{$name} {
    code {
      background: $primary;
      color: $white;
      padding: 0.1em 0.5em;
      border-radius: 2px;
      white-space: pre-wrap;
    }
    .signal{
      color: $primary;
    }
    a{
      color: $primary;
      border-bottom: 2px solid $secondary;
    }
    a.plan{
      color: $primary;
      border: 5px solid currentColor;
    }
    section h2:after {
      border-bottom-color: $primary;
    }
    footer{
      background: $primary;
      color: $secondary;
      a{
        color: #FFF;
        border-bottom: 2px solid rgba(255,255,255,0.5);
      }
    }
    pre{
      color: #fff;
      background-color: $primary;
      border-radius: 5px;
    }
    .logo path{
      fill: $primary;
    }
    &.m-zooming {
      background: $intermediary;
      &:after {
        content: "Swipe image to pan. Tap to close";
        color: white;
        text-align: center;
        width: 100%;
        display: block;
        font-size: 0.875rem;
        padding: 1em 0 0.7em;
        position: relative;
        background: $intermediary;
      }
    }
    .m-magnifikCanvas {
      border: 5px solid $intermediary;
      background: $intermediary;
      // height: calc(100vh - 105px) !important;
      img {
        border-radius: 20px;
        padding: 50px;
        background: white;
        margin-top: 45px;
      }
    }
    nav.header {
      border-top: 3px solid $primary;
    }
  }
}

@include theme(gk-saas, $green-primary, $green-secondary, $green-intermediary);
@include theme(gk-enterprise, $blue-primary, $blue-secondary, $blue-intermediary);

* {
  box-sizing: border-box;
}

html{
  font-size: 18px;
}

a {
  -webkit-tap-highlight-color: transparent;
}

.super {
  vertical-align: text-top;
  font-size: 0.7em;
  font-weight: bold;
}

.small {
  font-size: 0.8em;
}

.red {
  color: #B4270F;
}

.purple {
  color: #A52A9A;
}

.green {
  color: $green-primary;
}

.align-left,
.single.align-left{
  text-align: left;
}

body{
  font-family: sans-serif;
  color: $text;
  background-color: $off-white;
  margin: 0;
  padding: 0;
  line-height: 1.35;
  background-repeat: repeat-y;
  background-size: 100%;
  // background-image: url(../images/bg_nodes_gk-saas.svg);
  &.gk-enterprise{
    // background-image: url(../images/bg_nodes_gk-enterprise.svg);
  }
  &.no-scroll {
    overflow: hidden;
  }
  &:not(.index) .container {
    margin-top: 4rem;
  }
}

strong {
  color: $em-text;
}

nav {
  padding: 1rem 0;
  width: 100%;
  background: rgba(255, 255, 255, 0.65);
  height: auto;
  top: 0;
  z-index: 100;
}

/*
nav ul {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  font-size: 0.75rem;
  color: #000;
  text-transform: uppercase;
  font-weight: bold;
  flex-wrap: wrap;
  font-family: $fonts;
  letter-spacing: 0.1em;
  li{
    &.account {
      order: -1;
      width: 100%;
      text-align: right;
      margin-bottom: 1.5em;
      @media screen and (min-width: $column-width) {
        order: inherit;
        width: auto;
        text-align: inherit;
        margin-bottom: 0;
        margin-left: auto;
      }
    }
  }
}
*/

nav.header {
  position: fixed;
  width: 100vw;
  height: 3.9rem;
  background: $white;
  padding: 0;
  top: 0;
  margin: 0;
  display: flex;
  flex-wrap: wrap;
  align-items: flex-end;
  z-index: 100;
  // transition: all 0.5s;
  &.is-active {
    height: 100vh;
    ul {
      transform: translateX(0);
    }
  }
  ul {
    transform: translateX(-100vw);
    // transition: all 0.5s;
    margin: 1em 0 2em 1em;
    padding: 0;
    li {
      display: block;
      margin: 0 0 1em 0;
      width: 100%;
      text-transform: uppercase;
      letter-spacing: 0.1em;
      font-family: $fonts;
    }
  }
}

nav ul li {
  display: inline-block;
  margin: 0.5em 1.4em 0.5em 0;
  &.active a {
    color: #000;
    pointer-events: none;
    border-bottom: none;
  }
}

a.menu-button {
  display: flex;
  border: none !important;
  position: absolute;
  right: 1.25rem;
  top: 0.85rem;
  color: $black;
  fill: currentColor;
  font-family: $fonts;
  letter-spacing: 0.1em;
  font-size: 0.75rem;
  text-transform: uppercase;
  font-weight: bold;
  .menu, .close {
    line-height: 2.1rem;
    position: absolute;
    right: 2.5rem;
    color: inherit;
    transition: all .2s;
  }
  .menu {
    opacity: 1;
  }
  .close {
    opacity: 0;
  }
  .icon {
    width: 2rem;
    height: 2rem;
    svg {
      transition: all .2s;
    }
  }
  &.is-active {
    .menu {
      opacity: 0;
    }
    .close {
      opacity: 1;
    }
    svg {
      transform: rotate(45deg);
    }
  }
}

@keyframes from-top{
  0% {
    transform: translateY(-200px);
  };
  100% {
    transform: translateY(0);
  };
}

nav ul li a{
  // margin-left: 0.25em;
  position: relative;
  // Embiggen touch targets
  &:before{
    content: "";
    padding: 1.6em 1em;
    width: 100%;
    position: absolute;
    left: -1em;
    top: -1em;
  }
}

@keyframes scrollGood {
  0% {
    transform: translate3d(0,0,0);
  }
  100% {
    transform: translate3d(0,-600px,0);
  }
}
/* ... */

